--- a/configs/app_config.yaml
+++ b/configs/app_config.yaml
@@ -5,6 +5,10 @@ logging:
   path: "logs/default.log"  # Log file path (relative to project root)
   console_enabled: false    # Enable console output alongside file logging
 
+input:
+  method: "cli"   # Input method, currently "gui" or "cli"
+  retry_count: 3  # Number of retry attempts for GUI/CLI initialization failures
+
 # Data storage configuration:
 data_storage:
   data_dir: "data"                                     # Main data directory
